# stanford_labs

./: README
1/: Lab1.hs  Makefile  README  Setup.hs  haiku  haq.cabal  lab1  lab1.cabal  lab1.hs
