Name:                Lab1
Version:             0.0.1
Description:         Lab1 implementation (http://www.scs.stanford.edu/11au-cs240h/labs/lab1.html)
License:             GPL
License-file:        LICENSE
Author:              gregolsen
Maintainer:          anotheroneman@yahoo.com
Build-Type:          Simple
Cabal-Version:       >=1.2

Executable lab1
  Main-is:           Lab1.hs
  Build-Depends:     base >= 3 && < 5, containers
